--- a/app/src/main/res/layout/activity_roominfo.xml
+++ b/app/src/main/res/layout/activity_roominfo.xml
@@ -62,8 +62,6 @@
                 android:layout_height="25dp"
                 android:background="@drawable/chat"
                 android:layout_weight="1"
-
-
                 />
 
             <TextView
@@ -80,14 +78,24 @@
 
         </LinearLayout>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="3dp">
 
-
-    <ImageView
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="200dp">
+        </android.support.v4.view.ViewPager>
+        <!--<ImageView
         android:id="@+id/imageview"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:src="@mipmap/ic_launcher"
-        /> <!-- android:background="@drawable/oneroom" -->
+        />  android:background="@drawable/oneroom" -->
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
